--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["kassiebradshaw <kassie.r.bradshaw@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 pytest = "^6.2.4"
+black = "^21.6b0"
 
 [tool.poetry.dev-dependencies]
 
